syntax = "proto3";

option csharp_namespace = "DummyClient.gRPC";

package chat;

// 채팅 서비스 정의
service ChatService {
  rpc StreamChat(stream ChatMessage) returns (stream ChatMessage);
}

// 통합 채팅 메시지
message ChatMessage {
  string user_id = 1;
  int64 timestamp = 2;
  
  oneof chat_context {
    LobbyChatMessage lobby_chat = 10;
    RoomChatMessage room_chat = 11;
    TestChatMessage test_chat = 12;
  }
}

// 로비 채팅 메시지
message LobbyChatMessage {
  string content = 1;
  LobbyMessageType type = 2;
  string announcement_level = 3; // 공지사항 레벨 (normal, important, urgent)
}

// 룸 채팅 메시지  
message RoomChatMessage {
  string room_id = 1;
  string content = 2;
  RoomMessageType type = 3;
  string team_id = 4; // 팀 채팅용
}

// 테스트 채팅 메시지 (기존 호환용)
message TestChatMessage {
  string room_id = 1;
  string content = 2;
  MessageType type = 3;
}

// 로비 메시지 타입
enum LobbyMessageType {
  LOBBY_CHAT = 0;
  LOBBY_ANNOUNCEMENT = 1;
  LOBBY_SYSTEM = 2;
}

// 룸 메시지 타입
enum RoomMessageType {
  ROOM_CHAT = 0;
  ROOM_TEAM_CHAT = 1;
  ROOM_JOIN = 2;
  ROOM_LEAVE = 3;
  ROOM_SYSTEM = 4;
}

// 기존 메시지 타입 (하위 호환용)
enum MessageType {
  CHAT = 0;
  JOIN = 1;
  LEAVE = 2;
  SYSTEM = 3;
}